Fix kyrie images alignment

--- a/styles.css
+++ b/styles.css
@@ -116,8 +116,7 @@ button:hover {
     & #information-list ul {
         display: flex;
         list-style: none;
-        align-items: center;
-        justify-content: space-evenly;
+        justify-content: space-around;
         flex-wrap: wrap;
         margin: auto;
         width: 100%;
@@ -127,7 +126,7 @@ button:hover {
         border-radius: 20px;
         width: 200px;
         height: 200px;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
 
     & .information-subtext {
@@ -151,7 +150,6 @@ button:hover {
         justify-content: center;
         align-items: flex-end;
         margin-top: 5%;
-        width:fit-content;
         font-size: 36px;
         font-style: italic;
         font-weight: lighter;
